@@ -64,9 +64,7 @@
 
 
 
-/* Used to point to from empty path segments.
- * X.first and X.afterLast must be the same non-NULL value then. */
-static const URI_CHAR URI_FUNC(SafeToPointTo) = _UT('X');
+/*extern*/ const URI_CHAR URI_FUNC(SafeToPointTo) = _UT('X');
 
 
 
