@@ -222,6 +222,9 @@ static URI_INLINE void URI_FUNC(StopMalloc)(URI_TYPE(ParserState) * state) {
  */
 static URI_INLINE const URI_CHAR * URI_FUNC(ParseAuthority)(URI_TYPE(ParserState) * state, const URI_CHAR * first, const URI_CHAR * afterLast) {
 	if (first >= afterLast) {
+		/* "" regname host */
+		state->uri->hostText.first = &URI_FUNC(SafeToPointTo);
+		state->uri->hostText.afterLast = &URI_FUNC(SafeToPointTo);
 		return afterLast;
 	}
 
@@ -261,6 +264,9 @@ static URI_INLINE const URI_CHAR * URI_FUNC(ParseAuthority)(URI_TYPE(ParserState
 		return URI_FUNC(ParseOwnHostUserInfoNz)(state, first, afterLast);
 
 	default:
+		/* "" regname host */
+		state->uri->hostText.first = URI_FUNC(SafeToPointTo);
+		state->uri->hostText.afterLast = URI_FUNC(SafeToPointTo);
 		return first;
 	}
 }
@@ -1994,8 +2000,13 @@ static URI_INLINE UriBool URI_FUNC(PushPathSegment)(URI_TYPE(ParserState) * stat
 		return URI_FALSE; /* Raises malloc error */
 	}
 	memset(segment, 0, sizeof(URI_TYPE(PathSegment)));
-	segment->text.first = first;
-	segment->text.afterLast = afterLast;
+	if (first == afterLast) {
+		segment->text.first = URI_FUNC(SafeToPointTo);
+		segment->text.afterLast = URI_FUNC(SafeToPointTo);
+	} else {
+		segment->text.first = first;
+		segment->text.afterLast = afterLast;
+	}
 
 	/* First segment ever? */
 	if (state->uri->pathHead == NULL) {
