@@ -756,8 +756,7 @@ private:
 
 		TEST_ASSERT(uriA.pathHead->text.first == input);
 		TEST_ASSERT(uriA.pathHead->text.afterLast == input + 3);
-		TEST_ASSERT(uriA.pathHead->next->text.first == input + 3 + 1);
-		TEST_ASSERT(uriA.pathHead->next->text.afterLast == input + 3 + 1);
+		TEST_ASSERT(uriA.pathHead->next->text.first == uriA.pathHead->next->text.afterLast);
 		TEST_ASSERT(uriA.pathHead->next->next == NULL);
 		TEST_ASSERT(uriA.pathTail == uriA.pathHead->next);
 		uriFreeUriMembersA(&uriA);
